--- a/apps/web/public/index.html
+++ b/apps/web/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <link rel="stylesheet" href="/css/app.css" />
+    <link rel="stylesheet" href="/css/imagine.css" />
     <link rel="stylesheet" href="/css/fontawesome.css" />
     <title>Imagine</title>
   </head>
