Change admin panel theme to be much more sexier

--- a/apps/admin-web/public/index.html
+++ b/apps/admin-web/public/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
+    <link rel="stylesheet" href="/css/vendor.css" />
+    <link rel="stylesheet" href="/css/theme.css" />
     <link rel="stylesheet" href="/css/imagine.css" />
     <link rel="stylesheet" href="/css/fontawesome.css" />
     <title>Imagine</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div class="container-scroller" id="root"></div>
   </body>
 </html>
