Convert header and navigation

--- a/apps/cosmic-web/public/index.html
+++ b/apps/cosmic-web/public/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <link rel="stylesheet" href="/css/app.css" />
+    <link rel="stylesheet" href="/css/cosmic.css" />
     <link rel="stylesheet" href="/css/imagine.css" />
-    <link rel="stylesheet" href="/css/fontawesome.css" />
     <title>Imagine</title>
   </head>
   <body>
