--- a/apps/modern-flat-web/public/index.html
+++ b/apps/modern-flat-web/public/index.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <link rel="stylesheet" href="/css/app.css" />
-    <link rel="stylesheet" href="/css/imagine.css" />
-    <link rel="stylesheet" href="/css/fontawesome.css" />
+    <link type="text/css" href="/css/style.css" rel="stylesheet">
     <title>Imagine</title>
   </head>
   <body>
