--- a/apps/imagine-web/public/index.html
+++ b/apps/imagine-web/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
+    <link rel="stylesheet" href="/css/imagine.css" />
     <title>Imagine</title>
   </head>
   <body>
