--- a/apps/levlo-web/public/index.html
+++ b/apps/levlo-web/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <link type="text/css" href="/css/style.css" rel="stylesheet">
+    <link type="text/css" href="/css/bootstrap.css" rel="stylesheet">
     <title>Imagine</title>
   </head>
   <body>
