--- a/apps/admin-web/index.html
+++ b/apps/admin-web/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/css/theme.css" />
   <link rel="stylesheet" href="/css/imagine.css" />
   <link rel="stylesheet" href="/css/fontawesome.css" />
-  <title>X-Ray</title>
+  <title>Imagine</title>
 </head>
 
 <body>
