--- a/apps/imagine-web/index.html
+++ b/apps/imagine-web/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;700&display=swap" rel="stylesheet">
-  <title>X-Ray</title>
+  <title>Imagine</title>
 </head>
 
 <body>
