--- a/apps/cerberus-web/index.html
+++ b/apps/cerberus-web/index.html
@@ -11,5 +11,8 @@
 
 <body>
   <div id="root"></div>
+  <script>
+    const global = globalThis;
+  </script>
   <script type="module" src="/src/index.tsx"></script>
 </body>
