--- a/apps/imagine-web/index.html
+++ b/apps/imagine-web/index.html
@@ -13,6 +13,15 @@
 </head>
 
 <body>
+  <div id="google_translate_element"></div>
+
   <div id="root"></div>
   <script type="module" src="/src/index.tsx"></script>
+  <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({ layout: google.translate.TranslateElement.InlineLayout.HORIZONTAL, pageLanguage: 'en' }, 'google_translate_element');
+    }
+  </script>
+  <script type="text/javascript"
+    src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
