--- a/apps/cerberus-web/index.html
+++ b/apps/cerberus-web/index.html
@@ -15,4 +15,5 @@
   <script>
     const global = globalThis;
   </script>
+  <script type="text/javascript" src="//translate.google.com/translate_a/element.js"></script>
 </body>
