--- a/apps/imagine-web/index.html
+++ b/apps/imagine-web/index.html
@@ -4,11 +4,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="initial-scale=1, width=device-width" />
-  <link rel="stylesheet" href="/css/imagine.css" />
   <link rel="stylesheet" href="/css/fontawesome.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Dosis:wght@400;500;600;700;800&family=Noto+Sans:wght@400;500;700&display=swap"
+    rel="stylesheet">
   <title>Imagine</title>
 </head>
 
